--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -58,13 +58,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="collections\Genre.cs" />
+    <Compile Include="collections\IMatchAMovie.cs" />
+    <Compile Include="collections\IsInGenre.cs" />
+    <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Movie.cs" />
     <Compile Include="collections\MovieCondition.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
-    <Compile Include="utility\Condition.cs" />
+    <Compile Include="utility\filtering\Condition.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
+    <Compile Include="utility\filtering\IMatchAn.cs" />
+    <Compile Include="utility\filtering\MatchExtensions.cs" />
+    <Compile Include="utility\filtering\OrMatch.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
