--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="collections\ConditionAdapter.cs" />
     <Compile Include="collections\Genre.cs" />
     <Compile Include="collections\IMatchAMovie.cs" />
     <Compile Include="collections\IsInGenre.cs" />
