--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -57,7 +57,6 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="collections\ConditionAdapter.cs" />
     <Compile Include="collections\Genre.cs" />
     <Compile Include="collections\IMatchAMovie.cs" />
     <Compile Include="collections\IsInGenre.cs" />
@@ -67,6 +66,8 @@
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
+    <Compile Include="collections\Where.cs" />
+    <Compile Include="utility\filtering\AnonymousCondition.cs" />
     <Compile Include="utility\filtering\Condition.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
     <Compile Include="utility\filtering\IMatchAn.cs" />
