--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -66,13 +66,14 @@
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
-    <Compile Include="collections\Where.cs" />
+    <Compile Include="utility\filtering\PropertyAccessor.cs" />
     <Compile Include="utility\filtering\AnonymousCondition.cs" />
     <Compile Include="utility\filtering\Condition.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
     <Compile Include="utility\filtering\IMatchAn.cs" />
     <Compile Include="utility\filtering\MatchExtensions.cs" />
     <Compile Include="utility\filtering\OrMatch.cs" />
+    <Compile Include="utility\filtering\Where.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
