--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -66,6 +66,7 @@
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
+    <Compile Include="utility\filtering\NeverMatches.cs" />
     <Compile Include="utility\filtering\PropertyAccessor.cs" />
     <Compile Include="utility\filtering\AnonymousCondition.cs" />
     <Compile Include="utility\filtering\Condition.cs" />
