--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -67,6 +67,7 @@
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
     <Compile Include="utility\filtering\ComparableMatchFactory.cs" />
+    <Compile Include="utility\filtering\ICreateMatchers.cs" />
     <Compile Include="utility\filtering\MatchFactory.cs" />
     <Compile Include="utility\filtering\NegatingMatch.cs" />
     <Compile Include="utility\filtering\NeverMatches.cs" />
