--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -67,6 +67,8 @@
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
     <Compile Include="utility\filtering\ComparableMatchFactory.cs" />
+    <Compile Include="utility\filtering\EqualToAny.cs" />
+    <Compile Include="utility\filtering\FallsInRange.cs" />
     <Compile Include="utility\filtering\ICreateMatchers.cs" />
     <Compile Include="utility\filtering\MatchFactory.cs" />
     <Compile Include="utility\filtering\NegatingMatch.cs" />
@@ -78,7 +80,9 @@
     <Compile Include="utility\filtering\IMatchAn.cs" />
     <Compile Include="utility\filtering\MatchExtensions.cs" />
     <Compile Include="utility\filtering\OrMatch.cs" />
+    <Compile Include="utility\filtering\PropertyMatch.cs" />
     <Compile Include="utility\filtering\Where.cs" />
+    <Compile Include="utility\ranges\IContainValues.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
