--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -66,11 +66,10 @@
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
-    <Compile Include="utility\filtering\ComparableMatchFactory.cs" />
     <Compile Include="utility\filtering\EqualToAny.cs" />
     <Compile Include="utility\filtering\FallsInRange.cs" />
-    <Compile Include="utility\filtering\ICreateMatchers.cs" />
-    <Compile Include="utility\filtering\MatchFactory.cs" />
+    <Compile Include="utility\filtering\MatchCreationExtensionPoint.cs" />
+    <Compile Include="utility\filtering\MatchCreationExtensions.cs" />
     <Compile Include="utility\filtering\NegatingMatch.cs" />
     <Compile Include="utility\filtering\NeverMatches.cs" />
     <Compile Include="utility\filtering\PropertyAccessor.cs" />
