--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -71,7 +71,9 @@
     <Compile Include="utility\filtering\EnumerableFilteringExtensions.cs" />
     <Compile Include="utility\filtering\EqualToAny.cs" />
     <Compile Include="utility\filtering\FallsInRange.cs" />
+    <Compile Include="utility\filtering\ICreateTheDSLReturnType.cs" />
     <Compile Include="utility\filtering\IProvideAccessToCreatingMatchers.cs" />
+    <Compile Include="utility\filtering\NegatingEnumerableFilteringExtensionPoint.cs" />
     <Compile Include="utility\filtering\SpecificationFeatureExtensionPoint.cs" />
     <Compile Include="utility\filtering\MatchCreationExtensions.cs" />
     <Compile Include="utility\filtering\NegatingMatch.cs" />
