--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -74,6 +74,7 @@
     <Compile Include="utility\filtering\ICreateTheDSLReturnType.cs" />
     <Compile Include="utility\filtering\IProvideAccessToCreatingMatchers.cs" />
     <Compile Include="utility\filtering\NegatingEnumerableFilteringExtensionPoint.cs" />
+    <Compile Include="utility\filtering\Order.cs" />
     <Compile Include="utility\filtering\SpecificationFeatureExtensionPoint.cs" />
     <Compile Include="utility\filtering\MatchCreationExtensions.cs" />
     <Compile Include="utility\filtering\NegatingMatch.cs" />
