--- a/source/prep/prep.csproj
+++ b/source/prep/prep.csproj
@@ -66,6 +66,7 @@
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="collections\ReadOnlySetOf.cs" />
+    <Compile Include="utility\filtering\ComparerExtensions.cs" />
     <Compile Include="utility\filtering\DateMatchCreationExtensions.cs" />
     <Compile Include="utility\filtering\ReverseComparer.cs" />
     <Compile Include="utility\filtering\EnumerableFilteringExtensionPoint.cs" />
